[project]
name = "rltest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gymnasium>=1.0.0",
    "numpy>=2.2.0",
    "pettingzoo>=1.24.3",
    "tensordict",
    "torchrl",
    "tqdm>=4.67.1",
]

[tool.uv.sources]
torchrl = { git = "https://github.com/pytorch/rl" }
tensordict = { git = "https://github.com/pytorch/tensordict" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
